// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCellOutputs > filters out empty text/plain stderr output 1`] = `[]`;

exports[`buildCellOutputs > filters out empty text/plain stdout output 1`] = `[]`;

exports[`buildCellOutputs > filters out empty traceback output 1`] = `[]`;

exports[`buildCellOutputs > filters out null output data 1`] = `[]`;

exports[`buildCellOutputs > filters out undefined output data 1`] = `[]`;

exports[`buildCellOutputs > handles HTML output 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"text/html","channel":"output","data":"<div>Hello <b>world</b></div>","timestamp":0},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
]
`;

exports[`buildCellOutputs > handles JSON output 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"application/json","channel":"output","data":{"foo":"bar","count":42},"timestamp":0},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
]
`;

exports[`buildCellOutputs > handles application/vnd.marimo+traceback output 1`] = `
[
  {
    "items": [
      {
        "data": "{"name":"TypeError","message":"invalid value","stack":"Traceback (most recent call last):\\n  File <a href=\\"/tmp/foo.py:1\\">/tmp/foo.py:1</a>\\u001b[2m, in <module>\\u001b[0m\\n\\u001b[1;31mTypeError\\u001b[0m: invalid value"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": undefined,
  },
]
`;

exports[`buildCellOutputs > handles boolean false output 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"application/json","channel":"output","data":false,"timestamp":0},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
]
`;

exports[`buildCellOutputs > handles empty marimo error data array 1`] = `[]`;

exports[`buildCellOutputs > handles empty state 1`] = `[]`;

exports[`buildCellOutputs > handles marimo error output 1`] = `
[
  {
    "items": [
      {
        "data": "{"name":"syntax","message":"Syntax error: Invalid syntax"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "marimo-error",
    },
  },
]
`;

exports[`buildCellOutputs > handles media channel in console outputs 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":null,"consoleOutputs":[{"mimetype":"image/png","channel":"media","data":"base64encodedimagedata","timestamp":0}],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > handles media channel with stdout in console outputs 1`] = `
[
  {
    "items": [
      {
        "data": "Text output
",
        "mime": "application/vnd.code.notebook.stdout",
      },
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":null,"consoleOutputs":[{"mimetype":"text/plain","channel":"stdout","data":"Text output\\n","timestamp":0},{"mimetype":"image/png","channel":"media","data":"imagedata","timestamp":1}],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > handles mix of empty and non-empty console outputs 1`] = `
[
  {
    "items": [
      {
        "data": "Actual output
",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
  {
    "items": [
      {
        "data": "Actual error
",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles mixed output and console streams 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"text/html","channel":"output","data":"<div>Result: 42</div>","timestamp":2},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
  {
    "items": [
      {
        "data": "Processing...
",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
  {
    "items": [
      {
        "data": "Warning: deprecated function
",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles multiple console outputs 1`] = `
[
  {
    "items": [
      {
        "data": "Line 1
",
        "mime": "application/vnd.code.notebook.stdout",
      },
      {
        "data": "Line 2
",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
  {
    "items": [
      {
        "data": "Warning: something happened
",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles multiple errors in marimo error output 1`] = `
[
  {
    "items": [
      {
        "data": "{"name":"ValueError","message":"ValueError: ValueError: invalid value"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "marimo-error",
    },
  },
]
`;

exports[`buildCellOutputs > handles multiple stderr errors 1`] = `
[
  {
    "items": [
      {
        "data": "Error 1: Connection failed
",
        "mime": "application/vnd.code.notebook.stderr",
      },
      {
        "data": "Error 2: Retry failed
",
        "mime": "application/vnd.code.notebook.stderr",
      },
      {
        "data": "Error 3: Timeout
",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles null output object 1`] = `[]`;

exports[`buildCellOutputs > handles numeric zero output 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"application/json","channel":"output","data":0,"timestamp":0},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
]
`;

exports[`buildCellOutputs > handles stderr output 1`] = `
[
  {
    "items": [
      {
        "data": "Error message",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles stdin output 1`] = `
[
  {
    "items": [
      {
        "data": "Enter your name: ",
        "mime": "text/plain",
      },
    ],
    "metadata": {
      "channel": "stdin",
    },
  },
]
`;

exports[`buildCellOutputs > handles stdout + stderr + output together 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"application/json","channel":"output","data":{"result":"success","value":100},"timestamp":3},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
  {
    "items": [
      {
        "data": "Starting computation...
",
        "mime": "application/vnd.code.notebook.stdout",
      },
      {
        "data": "Computation complete
",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
  {
    "items": [
      {
        "data": "Warning: using deprecated API
",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > handles stdout output 1`] = `
[
  {
    "items": [
      {
        "data": "Hello from stdout",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > ignores output/marimo-error/pdb channels in console outputs 1`] = `
[
  {
    "items": [
      {
        "data": "Normal stdout",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > keeps exception marimo-error with raising_cell even when a traceback is present 1`] = `
[
  {
    "items": [
      {
        "data": "ZeroDivisionError: division by zero (raised in cell: raising-cell-id)",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "marimo-error",
    },
  },
  {
    "items": [
      {
        "data": "{"name":"ZeroDivisionError","message":"division by zero","stack":"Traceback (most recent call last):\\n  File <a href=\\"/tmp/cell.py:1\\">/tmp/cell.py:1</a>\\u001b[2m, in <module>\\u001b[0m\\n\\u001b[1;31mZeroDivisionError\\u001b[0m: division by zero"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > keeps marimo-error rule violations even when a traceback is present 1`] = `
[
  {
    "items": [
      {
        "data": "This cell redefines variables from other cells.

'x' was also defined by:
  • other-cell-id",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "marimo-error",
    },
  },
  {
    "items": [
      {
        "data": "{"name":"NameError","message":"unused","stack":"Traceback (most recent call last):\\n  File <a href=\\"/tmp/cell.py:1\\">/tmp/cell.py:1</a>\\u001b[2m\\u001b[0m\\n\\u001b[1;31mNameError\\u001b[0m: unused"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > keeps strict-exception marimo-error even when a traceback is present 1`] = `
[
  {
    "items": [
      {
        "data": "Strict execution error: name 'x' is not defined (ref: x, cell: blamed-cell-id)",
        "mime": "application/vnd.code.notebook.stderr",
      },
    ],
    "metadata": {
      "channel": "marimo-error",
    },
  },
  {
    "items": [
      {
        "data": "{"name":"NameError","message":"name 'x' is not defined","stack":"Traceback (most recent call last):\\n  File <a href=\\"/tmp/cell.py:1\\">/tmp/cell.py:1</a>\\u001b[2m, in <module>\\u001b[0m\\n\\u001b[1;31mNameError\\u001b[0m: name 'x' is not defined"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;

exports[`buildCellOutputs > preserves whitespace-only output 1`] = `
[
  {
    "items": [
      {
        "data": "   ",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > separates console outputs from main output correctly 1`] = `
[
  {
    "items": [
      {
        "data": "{"cellId":"test-cell-id","state":{"outline":null,"output":{"mimetype":"text/html","channel":"output","data":"<div>Main output</div>","timestamp":1},"consoleOutputs":[],"status":"idle","staleInputs":false,"interrupted":false,"errored":false,"stopped":false,"runElapsedTimeMs":null,"runStartTimestamp":null,"lastRunStartTimestamp":null,"debuggerActive":false}}",
        "mime": "application/vnd.marimo.ui+json",
      },
    ],
    "metadata": undefined,
  },
  {
    "items": [
      {
        "data": "Console output",
        "mime": "application/vnd.code.notebook.stdout",
      },
    ],
    "metadata": {
      "channel": "stdout",
    },
  },
]
`;

exports[`buildCellOutputs > suppresses redundant exception marimo-error when a traceback is also present 1`] = `
[
  {
    "items": [
      {
        "data": "{"name":"ZeroDivisionError","message":"division by zero","stack":"Traceback (most recent call last):\\n  File <a href=\\"/tmp/cell.py:1\\">/tmp/cell.py:1</a>\\u001b[2m, in <module>\\u001b[0m\\n\\u001b[1;31mZeroDivisionError\\u001b[0m: division by zero"}",
        "mime": "application/vnd.code.notebook.error",
      },
    ],
    "metadata": {
      "channel": "stderr",
    },
  },
]
`;
